v7.0

-Changed default rows to search in the report
-ttk migration