@@ -2,3 +2,4 @@ v7.0
 
 -Changed default rows to search in the report
 -ttk migration
+-Automatic row detection (It conflicts with the validation function while displaying numbers)
